[package]
name = "bismuth"
version = "0.1.0"
authors = ["nnmm <nnmmgit@gmail.com>"]

[[bin]]
name = "bismuth"
path = "src/main.rs"

[dependencies]
image = "0.10.0"
rand = "0.3.14"
piston = "0.24.0"
vecmath = "0.2.0"
piston_window = "0.50.0"
piston2d-graphics = "0.16.0"
pistoncore-glutin_window = "0.28.0"
piston2d-opengl_graphics = "0.31.0"
pistoncore-sdl2_window = "0.32.0"
ndarray = "0.6.2"